<resources>
    <string name="app_name">园林诚信平台</string>
    <string name="back">返回</string>
    <string name="home_exit">press again to exit</string>
    <string name="more">更多</string>
    <string name="account_cancel_hint">提示</string>
    <string name="account_cancel_affirm">是否确定退出？</string>
    <string name="call_affirm">点击「确定」后将自动为您拨打客服热线  </string>
    <string name="call_affirm_last">，为您解答疑问  </string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="entry">进入</string>
    <string name="prompt">提示</string>
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>
    <string name="menu_settings">设置</string>
    <string name="close">关闭</string>
    <string name="wrong_connection">无法连接到服务器，请检查网络设置！</string>
    <string name="wrong_location">定位失败</string>
    <string name="setting_cach">清除本地缓存</string>
    <string name="options_clean_hint">清除缓存将会删除已经加载好的商品图片哟！</string>
    <string name="options_clean_loading">正在为你清除...</string>
    <string name="app_refrsh">刷新</string>
    <string name="app_notaccesswifi">暂无网络连接</string>
    <string name="hc_home">首页</string>
    <string name="hc_xinxi">message</string>
    <string name="hc_work">工作台</string>
    <string name="hc_xiangmu">应用</string>
    <string name="hc_xiangmuguanl">项目管理</string>
    <string name="hc_my">我的</string>
    <string name="login">登录</string>
    <string name="click_login">点击登录</string>
    <string name="login_user_phone">username/phone number</string>
    <string name="login_phone">phone number</string>
    <string name="login_contact">contact name</string>
    <string name="login_email">Email</string>
    <string name="login_IDCard">legal PersonID card</string>
    <string name="login_user">username</string>
    <string name="login_pass_hint">password</string>
    <string name="login_pass_find">forget password</string>
    <string name="login_pass_quick">register</string>
    <string name="login_msg_hint">not login yet</string>
    <string name="login_exit">logout</string>
    <string name="cooperation_login">使用合作网站账号登录</string>
    <string name="register_hint_protocol">我已阅读并接受</string>
    <string name="register_hint_protocol_click">溯源用户协议</string>
    <string name="user_hint_protocol_error">请勾选用户协议</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_echo_phone">请输入手机号</string>
    <string name="register_echo_contact">请输入姓名</string>
    <string name="register_echo_companyName">请输入企业名称</string>
    <string name="register_echo_email">请输入邮箱</string>
    <string name="register_echo_IDCard">请输入身份证号</string>
    <string name="next">下一步</string>
    <string name="login_auth_code">验证码</string>
    <string name="register_code">验  证</string>
    <string name="register_company_name">company name</string>
    <string name="register_sex">sex</string>
    <string name="register_confirm_pic">身份证</string>
    <string name="register_confirm_pass">password_confirm</string>
    <string name="register_echo_pass">请输入密码</string>
    <string name="register_hint_pass">6-16个字符</string>
    <string name="register_hint_pic">请上传身份证正反照</string>
    <string name="register_echo_repeat_pass">再次输入密码</string>
    <string name="register_finish">注册</string>
    <string name="account_exit">退出登录</string>
    <string name="register_sender_code">重发验证码</string>
    <string name="register_surplus_code">还有</string>
    <string name="register_surplus_code_end">秒</string>
    <string name="login_toservice">登录享受更贴心的定制服务</string>
    <string name="my_logintitle">点击登录更精彩</string>
    <string name="my_loginnicheng">点击修改昵称</string>
    <string name="my_loginnotitle">暂未登录</string>
    <string name="my_updateusernametitle">修改昵称</string>
    <string name="about_version">当前版本：</string>
    <string name="about_update">检查更新</string>
    <string name="about_protocol">用户协议</string>
    <string name="about_help">使用帮助</string>
    <string name="update_title">版本更新提示</string>
    <string name="update_msg">请更新后再使用！</string>
    <string name="update_null">您当前版本为最新版本，无需更新。</string>
    <string name="update_btn_ok">马上更新</string>
    <string name="update_btn_cancel">以后再说</string>
    <string name="updateing_hint">新版本下载</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
</resources>